Sun Dec 19 02:32:29 GMT 2010  Olly Betts <olly@survex.com>

	* query.cc: Fix comment typo.

Fri Dec 17 12:45:47 GMT 2010  Olly Betts <olly@survex.com>

	* commonhelp.cc,commonhelp.h,omindex.cc,scriptindex.cc: Swap the
	  meanings of -v and -V in omindex for consistency with scriptindex
	  and typical short options for --verbose and --version in other
	  packages.  For backward compatibility, "omindex -v" is handled
	  specially and still reports the version.

Fri Dec 17 08:31:29 GMT 2010  Olly Betts <olly@survex.com>

	* utf8convert.cc: Fix built in converter to handle space in charset
	  names, which fixes failing utf8converttest when iconv isn't
	  available.

Fri Dec 17 05:36:36 GMT 2010  Olly Betts <olly@survex.com>

	* utf8convert.cc: Rework the fixing up of charset names which iconv()
	  doesn't understand a little.

Thu Dec 16 06:35:46 GMT 2010  Olly Betts <olly@survex.com>

	* loadfile.cc: If fstat() fails, preserve the errno value rather than
	  letting close() clobber it.

Thu Dec 16 06:31:30 GMT 2010  Olly Betts <olly@survex.com>

	* loadfile.cc: Fix file descriptor leak if load_file() is called on
	  something which isn't a file (found by cppcheck run on the Debian
	  archive).  This case probably couldn't occur in omindex, but could if
	  you used the LOADFILE action in scriptindex.

Thu Dec 09 10:58:48 GMT 2010  Olly Betts <olly@survex.com>

	* docs/omegascript.rst: Replace $simplecommand with $query - a concrete
	  example is more useful.  Improve mark-up.
	* docs/termprefixes.rst: Remove mention of pre-0.9.7 use of W prefix.

Thu Nov 18 12:25:50 GMT 2010  Olly Betts <olly@survex.com>

	* omega.cc: Fix reversed condition in recent exception reporting fix.

Wed Nov 17 03:46:24 GMT 2010  Olly Betts <olly@survex.com>

	* diritor.cc: Add missing magic_cookie argument to calls to
	  magic_error().

Sat Nov 13 12:17:51 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Build up document data with += for efficiency.
