@@ -1,3 +1,8 @@
+Sun Dec 19 02:46:17 GMT 2010  Olly Betts <olly@survex.com>
+
+	* docs/overview.rst,omindex.cc: Change the new name for
+	  "--preserve-unupdated" from "--preserve-removed" to "--no-delete".
+
 Sun Dec 19 02:32:29 GMT 2010  Olly Betts <olly@survex.com>
 
 	* query.cc: Fix comment typo.
